src/bindings.rs

extern "C" {
    pub fn iauPas(al: f64, ap: f64, bl: f64, bp: f64) -> f64;
}
extern "C" {
    pub fn iauSepp(a: *mut f64, b: *mut f64) -> f64;
}
extern "C" {
    pub fn iauSeps(al: f64, ap: f64, bl: f64, bp: f64) -> f64;
}
extern "C" {
    pub fn iauC2s(p: *mut f64, theta: *mut f64, phi: *mut f64);
}
extern "C" {
    pub fn iauP2s(p: *mut f64, theta: *mut f64, phi: *mut f64, r: *mut f64);
}
extern "C" {
    pub fn iauPv2s(
        pv: *mut [f64; 3usize],
        theta: *mut f64,
        phi: *mut f64,
        r: *mut f64,
        td: *mut f64,
        pd: *mut f64,
        rd: *mut f64,
    );
}
extern "C" {
    pub fn iauS2c(theta: f64, phi: f64, c: *mut f64);
}
extern "C" {
    pub fn iauS2p(theta: f64, phi: f64, r: f64, p: *mut f64);
}
extern "C" {
    pub fn iauS2pv(theta: f64, phi: f64, r: f64, td: f64, pd: f64, rd: f64, pv: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPdp(a: *mut f64, b: *mut f64) -> f64;
}
extern "C" {
    pub fn iauPm(p: *mut f64) -> f64;
}
extern "C" {
    pub fn iauPmp(a: *mut f64, b: *mut f64, amb: *mut f64);
}
extern "C" {
    pub fn iauPn(p: *mut f64, r: *mut f64, u: *mut f64);
}
extern "C" {
    pub fn iauPpp(a: *mut f64, b: *mut f64, apb: *mut f64);
}
extern "C" {
    pub fn iauPpsp(a: *mut f64, s: f64, b: *mut f64, apsb: *mut f64);
}
extern "C" {
    pub fn iauPvdpv(a: *mut [f64; 3usize], b: *mut [f64; 3usize], adb: *mut f64);
}
extern "C" {
    pub fn iauPvm(pv: *mut [f64; 3usize], r: *mut f64, s: *mut f64);
}
extern "C" {
    pub fn iauPvmpv(a: *mut [f64; 3usize], b: *mut [f64; 3usize], amb: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPvppv(a: *mut [f64; 3usize], b: *mut [f64; 3usize], apb: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPvu(dt: f64, pv: *mut [f64; 3usize], upv: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPvup(dt: f64, pv: *mut [f64; 3usize], p: *mut f64);
}
extern "C" {
    pub fn iauPvxpv(a: *mut [f64; 3usize], b: *mut [f64; 3usize], axb: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauPxp(a: *mut f64, b: *mut f64, axb: *mut f64);
}
extern "C" {
    pub fn iauS2xpv(s1: f64, s2: f64, pv: *mut [f64; 3usize], spv: *mut [f64; 3usize]);
}
extern "C" {
    pub fn iauSxp(s: f64, p: *mut f64, sp: *mut f64);
}
extern "C" {
    pub fn iauSxpv(s: f64, pv: *mut [f64; 3usize], spv: *mut [f64; 3usize]);
}
